# fastapi_llmops_demo

./: .gitignore  README.md
customer_support/: pyproject.toml
customer_support/src/customer_support/: __init__.py
customer_support/src/customer_support/backend/: agent.py  api.py  constants.py  mlflow.db
customer_support/src/customer_support/frontend/: app.py
customer_support/src/customer_support/monitoring/: agents.ipynb  eval_data.json  mlflow.db  monitoring.ipynb
